--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -50,6 +50,13 @@ button {
 .page {
     display: flex;
     flex-direction: column;
+    &__preloader {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .main {
@@ -84,7 +91,6 @@ button {
 
 .search {
     height: 100%;
-    padding: 25px 0 15px 0;
     &__wrapper {
         height: 100%;
         display: flex;
@@ -95,7 +101,7 @@ button {
     &__list {
         display: flex;
         flex-wrap: wrap;
-        height: calc(100vh - 60px - 65px - 87px - 130px);
+        height: calc(100vh - 305px);
         overflow-y: scroll;
         flex-grow: 1;
     }
@@ -106,6 +112,7 @@ button {
     }
     &__section {
         width: 100%;
+        height: 100%;
         margin: 50px 0 0 0;
         display: flex;
         align-items: flex-start;
