--- a/src/components/common/preloader/preloader.scss
+++ b/src/components/common/preloader/preloader.scss
@@ -1,5 +1,6 @@
 .preloader {
     margin: auto;
+    z-index: 2;
 }
 .lds-roller {
     display: inline-block;
