--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
     flex: 0 0 auto;
-    padding: 30px 0;
+    padding: 20px 0;
     background-color: #999999;
     text-align: center;
 }
